application/static/css/styles.css
/* CSS File for firstPage*/

html {
    height: 100%;
}

body {
    height: 100%;
}

h1{
    text-align: center;
}

hr {
    padding: 1px;
    background-color: white;
}

.carousel-item h1{
    text-align: center;
    color: white;
    font-size: 50px;
}
h3 {
    text-align: center;
    padding-top: 0;
    color: white;
}


#header {
    display: flex;
    justify-content: space-between;
}

footer {
    position:relative;
    top: 75%; /* corresponds to height of main-container*/
    text-align: center;
    margin: 1em;
}

nav {
    display: flex;
    align-items: center;
    width: 100%;
}

#navigation {
    margin: 1.5%;
    width: 40%;
}

#course_selector {
    padding-top: 1em;
    background-size: 100% 100%;
    width: 75%;
    margin: auto;
    height: 10em;
    margin: auto;
    text-align: center;
}

#search {
    display: inline-block;
    position: relative;
    margin: auto;
    border-radius: 5px;
    
}

.carousel-item p{
    text-align: center;
    color: white;
}

#main-container {
    background-image: url("https://mycareer.douglascollege.ca/content/documents/landingPageUploads/2019-06-28/r1004207873837977889521114853377473384225105839339r/Douglas_Student_Life_6841_Print_OrbisEditr529151934743251476513800308133308387358321979332r.jpg");
    border-image-repeat: stretch;
    background-position: 50% 50%;
    background-position-x: 50%;
    background-position-y: 50%;
    background-size: cover;
    width: 100%;
    padding-top: 7.5%;
    padding-bottom: 7.5%;

    height: 75%;
    overflow: hidden;
    position: absolute;
}



a {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
    color: rgb(140, 140, 140);
}

ul {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    list-style-image: none;
    list-style: none;
    box-sizing: border-box;
}

li {
    font-size: 2em;
    width: 150px;
    padding: 10px;
    color: rgb(136, 136, 136);
    text-align: center;
}

a:visited {
    color: rgb(136, 136, 136);
}

.carouselContent {
    width: 75%;
    height: 100%;
    margin: auto;
}

.custom-file-upload {
    border: 2px dashed #ccc;
    display: inline-block;
    text-align: center;
    cursor: pointer;
    width: 100%;
    height: 150px;
}

#selectedFiles {
    font-size: 10px;
}

#myProgress {
  width: 50%;
  margin: auto;
  background-color: #ddd;
}

#myBar {
  width: 1%;
  height: 50px;
  background-color: #4CAF50;
  text-align: center;
  padding: 1%;
  line-height: 30px;
  color: white;

}

#barContainer {
    margin: 5%;
}

#accordion {
    color: white;
    font-size: 0.5em;
}

#carouselContainer {
    margin: auto;
    padding-top: 2.5%;
    padding-bottom: 2.5%;

    width: 70%;
    height: 75%;
    color: #fff;
    font-size: 2em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: rgba(136, 136, 136, 0.66);

    position: absolute;
    left: 15%;
    top: 15%;
    overflow: scroll;
}

#catImg {
    display: block;
    margin: 0 auto; 

    width:30%; 
    height: 10%;

   padding-bottom: 30px;
    padding-top: 2.5%;
}

.calendar-choices-container {
    height: 100%;
    text-align: center;
    margin: 25px;
}

.calendar-choices-container img{
    width:50%; 
    
}

.carousel-control-next, .carousel-control-prev {
    border: white 2px solid;
    height: 60px;
}

.calendar-choices-container button {
    width: 30%;
    background: none;
    border:0;
    outline: 0;
/*Removed the border of button and background color*/
}

#submitFilesLabel {
    right: 12.5%;
    top: 80%;
}

#acceptButton {
    float: right;
    margin-right: 20px;
}

#addNewCourse {
    margin-left: 20px;
}

#backButton {
    top: 50%;
    margin-left: 2.5%;
    color: whitesmoke;
}

#accordion .course-title {
    display: inline;
}

#accordion .course-title:hover {
    cursor: pointer;
}

#accordion .delete-button {
    float: right;
}

#accordion .form-control {
    background-color: #0e0d0d61;
    margin: 5px;
    width: inherit;
    color: white;
    display: inline;
}

#accordion .course-form {
    background: none;
}

#accordion .form-group label {
    display: block;
}

.add-date-btn {
    margin-left: 15px;
}

.date-group {
    display: inline;
}

